AG-11613 Fix last input clipping on complete demo

--- a/documentation/ag-grid-docs/src/components/example-grid/Toolbar.module.scss
+++ b/documentation/ag-grid-docs/src/components/example-grid/Toolbar.module.scss
@@ -34,7 +34,7 @@
     }
 
     > *:last-child {
-        padding-right: 90px;
+        // padding-right: 90px;
     }
 
     select,
